Se corrigen las oraciones empleadas para compartir la aplicacion.
Se añaden tildes a palabras que lo necesitaban

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -172,7 +172,7 @@
     <!-- **********************************************************        fragment_compartir    *************************************************************************** -->
     <!--********************************************************************************************************************************************************************* -->
     <string name="textoInicial.Compartir">Si te gustó la aplicación no dudes en compartirla con tus amigos</string>
-    <string name="contentTitleFacebook.Compartir">Aplicación para ver anime online desde tu móvil. Cuenta con una grata interfaz y funcionalidades que facilitarán el proceso de ver tus series favoritas, dejando atrás esos malos momentos que pasaste en paginas llenas de publicidad</string>
+    <string name="contentTitleFacebook.Compartir">Aplicación para ver anime online desde tu móvil. Cuenta con una grata interfaz y funcionalidades que facilitarán el proceso de ver tus series favoritas, dejando atrás esos malos momentos que pasaste en páginas llenas de publicidad</string>
     <!--********************************************************************************************************************************************************************* -->
     <!-- **********************************************************        Tutorial   *************************************************************************** -->
     <!--********************************************************************************************************************************************************************* -->
